@@ -1,19 +1,10 @@
 {
-  "timestamp" : "2024-09-29T00:39:42Z",
-  "count_outdated" : 500,
-  "uniques_outdated" : 327,
+  "timestamp" : "2024-10-01T00:40:08Z",
+  "count_outdated" : 501,
+  "uniques_outdated" : 328,
   "count" : 503,
   "uniques" : 330,
   "clones" : [
-    {
-      "timestamp": "2024-09-16T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
-      "count_decinc": [ 0, 1 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ],
-      "uniques_decinc": [ 0, 1 ]
-    },
     {
       "timestamp": "2024-09-18T00:00:00Z",
       "count": 2,
